--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
 						<span>{@$i} + 1 = </span>
 						{content}
 							{if $i != 1 && true == true}
-								<span class="{if $i == 2}{@@test@@}{/if}">{@$i + 1}</span>
+								<span class="{if $i == 2}test{/if}">{@$i + 1}</span>
 							{/if}
 						{/content}
 					</div>
