--- a/examples/selfcontained.html
+++ b/examples/selfcontained.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>Demo 1</title>
-	<script src="template.js"></script>
+	<script src="../template.js"></script>
 </head>
 <body>
 	<h1>Demo 1</h1>
